# datatalks-mlops-zoomcamp

./: .gitignore  README.md  mlflow.db  pyproject.toml
mlops/: hpo.py  mlflow.db  register_model.py  taxi_predict.db  train.py
mlops/mlruns/1/1a76a2527d774e3cb2a958ce4eacd7fe/artifacts/model_mlflow/: model.pkl
mlops/mlruns/1/1d2f38d43d94498d8bfde4de5589c7d3/artifacts/model_mlflow/: MLmodel  model.pkl
mlops/mlruns/1/25c1f7436eeb4e57a13407ceec1954cb/artifacts/model_mlflow/: MLmodel  model.pkl
mlops/mlruns/1/644e0eeff61b461394401346213d6dbd/artifacts/model_mlflow/: MLmodel  model.pkl
mlops/mlruns/1/677b2390d75e42cda87576c52fbf780d/artifacts/model_mlflow/: MLmodel  model.pkl
mlops/mlruns/1/6b818026132e4f7098176b7a1d112bb3/artifacts/model_mlflow/: model.pkl
mlops/mlruns/1/73b78e52a69d4675a54c0a6b955636da/artifacts/model_mlflow/: MLmodel
mlops/mlruns/1/80b01b95925b42b58bd07ed09f2a9cf3/artifacts/model/: MLmodel
mlops/mlruns/1/8593e1e7c2c341efa8460c88c0e5233a/artifacts/model_mlflow/: MLmodel
mlops/mlruns/1/8d092653591e4acaaca48fb9065ce078/artifacts/model_mlflow/: model.pkl
mlops/mlruns/1/ccff3a90204446ef9835ea03d4c2d302/artifacts/model_mlflow/: MLmodel
mlops/mlruns/1/cd979cb35da54c5e8b19affeefda29c3/artifacts/model_mlflow/: MLmodel
notebooks/: mlflow.db  mlflow_registry.ipynb  ride_prediction.ipynb  ride_prediction_mlfow.ipynb  tracking_ride_prediction.ipynb
notebooks/mlruns/: mlflow.db
notebooks/mlruns/1/a05b28e6d5d84d6087ee54b6655064b2/: meta.yaml
notebooks/mlruns/models/nyc-taxi-regressor/: meta.yaml
(+45 files in other folders)
